<resources>
    <string name="app_name">MADESearchMovie</string>
    <string name="title">TITLE</string>
    <string name="tagline">tagline</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="genre">Genre</string>
    <string name="detail">Movie Detail</string>
    <string name="now_playing">Now Playing Movie</string>
    <string name="upcoming">Upcoming Movie</string>
    <string name="setting">Language Setting</string>
    <string name="search_movie">Search Movie</string>
    <string name="search">Search</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="movie_poster">movie poster</string>
    <string name="movie_backdrop">movie_backdrop</string>
</resources>
