<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".searchmovie.detailmovie.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/linear_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/backdrop_height">

                <ImageView
                    android:contentDescription="@string/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/blur" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/detail_poster_width"
                    android:layout_height="@dimen/detail_poster_height"
                    android:id="@+id/img_detail"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/tv_detail_shortoverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tagline" />

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/orange"
                        android:id="@+id/tv_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="@dimen/textsize_15" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/orange"
                        android:id="@+id/tv_detail_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textSize="@dimen/textsize_15" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="@dimen/width_0"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:textColor="@color/orange"
                        android:id="@+id/tv_detail_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/textsize_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="@dimen/textsize_15" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release"
                android:textSize="@dimen/textsize_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_release"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="@dimen/textsize_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>